--- a/3.html
+++ b/3.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body{
-background:orange;
+background:white;
 }
 h2{
 text-align:center;
@@ -10,6 +10,7 @@ background-color:orange;
 color:black;
 padding:10px;
 border-radius:5px;
+
 }
 input{
 padding:10px;
@@ -20,17 +21,21 @@ border-radius:5px;
 form{
 padding:10px;
 font-family:arial;
-border:1px dotted white;
+
 }
 .wrap{
 width:400px;
 margin:auto;
-background:#00adee;
+background:black;
 margin-top:50px;
 padding:5px;
+opacity:0.5;
 }
 input[type=submit]{
 background:orange;
+}
+th{
+color:white;
 }
 
 </style>
